syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcEdsService";

package envoy;

// The greeting service definition.
service ClusterRegisterService {
  // Sends a greeting
  rpc List (google.protobuf.Empty) returns (RegisterListResponse);
  rpc Get (RegisterGetRequest) returns (RegisterService);
}

// The request message containing the user's name.
message RegisterGetRequest {
  string service_name = 1;
}

// The response message containing the greetings.
message RegisterListResponse {
  map<string, RegisterService> message = 1;
}
message RegisterService {
  RegisterServiceHost hosts = 1;
}
message RegisterServiceHost {
  string ip_address = 1;
  int32 port = 2;
  RegisterServiceTags tags = 3;
}
message RegisterServiceTags {
  string az = 1;
  bool canary = 2;
  int32 load_balancing_weight = 3;
}
